# worldexplorer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  application.cpp  application.h  binding_group.cpp  binding_group.h  camera.cpp  camera.h  compile_commands.json  composition_pass.cpp  composition_pass.h  editor.cpp  editor.h  frustum_culling.cpp  frustum_culling.h  gpu_buffer.cpp  gpu_buffer.h  imgui.ini  input_manager.cpp  input_manager.h  instance.cpp  instance.h  main.cpp  mesh.h  model.cpp  model.h  model_registery.cpp  model_registery.h  pipeline.cpp  pipeline.h  point_light.cpp  point_light.h  renderpass.cpp  renderpass.h  shadow_pass.cpp  shadow_pass.h  shapes.cpp  (+18 more)
include/: animation.h  application.h  binding_group.h  camera.h  composition_pass.h  editor.h  frustum_culling.h  full_quad_converter.h  gpu_buffer.h  hdr_pass.h  input_manager.h  instance.h  linegroup.h  logger.hpp  material.h  mesh.h  model.h  model_registery.h  particle_system.h  physics.h  pipeline.h  point_light.h  profiling.h  rendererResource.h  renderpass.h  shader.h  shadow_pass.h  shapes.h  skybox.h  stb_image.h  terrain.h  terrain_pass.h  texture.h  transparency_pass.h  utils.h  water_pass.h  wgpu_utils.h  window.h  world.h
old_extern/glfw3webgpu/: CMakeLists.txt  glfw3webgpu.c  glfw3webgpu.h
resources/: composition.wgsl  editor.wgsl  lab.json  oit.wgsl  outline.wgsl  physics.json  room.json  shader.wgsl  shadow.wgsl  shooter.json  skybox.wgsl  sponza.json  terrain.wgsl  water.wgsl  world.json  world.json.back
resources/gizmo/: gizmo_center.glb  gizmo_up.glb  gizmo_x.glb  gizmo_y.glb
resources/gizmo/newgiz/: gizmo.gltf  gizmo_center.glb  gizmo_up.glb  gizmo_x.glb  gizmo_y.glb
resources/shaders/: common.wgsl  depth_prepass.wgsl  editor.wgsl  fqconverter.wgsl  hdr.wgsl  line_circle_pass.wgsl  line_pass.wgsl  mipmap.wgsl  outline.wgsl  particle_system.wgsl  shader.wgsl  shadow.wgsl  skybox.wgsl  terrain.wgsl  water.wgsl  water_reflection.wgsl
src/: animation.cpp  application.cpp  binding_group.cpp  camera.cpp  character.cpp  composition_pass.cpp  dragon.cpp  editor.cpp  frustum_culling.cpp  full_quad_converter.cpp  gpu_buffer.cpp  hdr_pass.cpp  input_manager.cpp  instance.cpp  linegroup.cpp  main.cpp  mesh.cpp  model.cpp  model_registery.cpp  particle_system.cpp  physics.cpp  pipeline.cpp  point_light.cpp  renderpass.cpp  shader.cpp  shadow_pass.cpp  shapes.cpp  skybox.cpp  terrain.cpp  terrain_pass.cpp  texture.cpp  transparency_pass.cpp  tree.cpp  ui_lib.c++  utils.cpp  water_pass.cpp  wgpu_utils.cpp  window.cpp  world.cpp
src/core/: audio_engine.cpp  audio_engine.h  exporter.cpp
webgpu/: CMakeLists.txt  commit-sha
